# datacomodev

./: CALISTIR.sh  CMakeLists.txt  Makefile  WSL_KULLANIM.md  client1  client2_receiver.cpp  error_detection.h  hizli_basla.sh  server
datacomOdev/: KURULUM.sh  README.md  client1_sender.cpp  client2  error_injection.h  server.cpp
